Updated scope search

--- a/DALIApp/Base.lproj/Main.storyboard
+++ b/DALIApp/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
         <scene sceneID="8fe-gC-uVy">
             <objects>
                 <navigationController id="Ux4-Be-DzM" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="Yct-AL-oHe">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Yct-AL-oHe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.59082579349999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -203,7 +203,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1BA-Og-fpG" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="UHe-Iq-Ujj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="UHe-Iq-Ujj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.59082579349999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
